# hNN_WT__MD_435082866799_000

./: .gitignore  ANN.cpp  ANN.hpp  ANNImplementation.cpp  ANNImplementation.hpp  ANNImplementationComputeDispatch.cpp  CMakeLists.txt  CreateDispatch.sh  README  descriptor.cpp  descriptor.h  eigen-v3.3.7.tar.xz  helper.cpp  helper.hpp  kimspec.edn  network.cpp  network.h
